style: Fix navbar overflow

--- a/client/src/Pages/_Layout/NavBar/NavBar.css
+++ b/client/src/Pages/_Layout/NavBar/NavBar.css
@@ -100,11 +100,7 @@
   display: none;
 }
 
-@media screen and (max-width: 960px) {
-  /* .NavbarItems {
-      position: relative;
-    } */
-
+@media screen and (max-width: 1250px) {
   .mobile-icon {
     display: inline-block;
     margin-right: 0.5rem;
